Minor changes / fixes.

--- a/complete/src/main/resources/templates/Whiskey-form.html
+++ b/complete/src/main/resources/templates/Whiskey-form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head xmlns:form="http://www.w3.org/1999/xhtml" >
-    <title> write in wiskey type</title>
+    <title> write in whiskey type</title>
 
 </head>
 <body>
@@ -9,15 +9,14 @@
 
 <form action="processForm" modelAttribute="whiskey">
 
-    Whisky id:<input name="wId" type="text" >
+    Whiskey id:<input name="wId" type="text" />
     <br>
-    Whisky Name:<input name="wName" type="text"/>
+    Whiskey Name:<input name="wName" type="text"/>
     <br>
-    Whisky Location:<input name="wLocation" type="text"/>
+    Whiskey Location:<input name="wLocation" type="text"/>
     <br>
     <input type="submit" value="Submit">
 
 
 </form>
-
 </html>
